[package]
name = "fetch-market-data-rs"
version = "0.1.0"
authors = ["Didy KUPANHY <d.kupanhy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"

reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0"
chrono = "0.4"

rusqlite = "0.23.1"
